helm/argocd/ingress/path/path-grafana-values.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: monitoring-grafana-ingress
  namespace: monitoring
  annotations:
    kubernetes.io/ingress.class: nginx
spec:
  ingressClassName: nginx
  rules:
    - host: apps.168.107.11.85.nip.io
      http:
        paths:
          - path: /grafana
            pathType: Prefix
            backend:
              service:
                name: prometheus-grafana        # 이미 맞춰둔 서비스
                port:
                  number: 80
