helm/argocd/ingress/path/path-portal-values.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: portal-ingress
  namespace: nginx
  annotations:
    kubernetes.io/ingress.class: nginx
    # 포탈 nginx가 그냥 / 기준으로 동작한다면 rewrite 불필요
    # 만약 /portal을 /로 잘라서 넘기고 싶으면 아래 주석 해제:
    nginx.ingress.kubernetes.io/rewrite-target: / # 안하면 404 발생
spec:
  ingressClassName: nginx
  rules:
    - host: apps.168.107.11.85.nip.io
      http:
        paths:
          - path: /portal
            pathType: Prefix
            backend:
              service:
                name: nginx-service   # 👈 지금 있는 NodePort 서비스 이름
                port:
                  number: 80          # 👈 service port (NodePort 아님!)
